# ocl-basic

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  main.c
